--- a/main.css
+++ b/main.css
@@ -57,6 +57,10 @@ h1 {
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
+h2 {
+  text-decoration: underline;
+}
+
 /* レスポンシブ対応 */
 @media (max-width: 600px) {
   .img-2col-container {
