--- a/main.css
+++ b/main.css
@@ -2,6 +2,10 @@ body {
   display: flex; /* 画面全体の配置を調整するための設定 */
   justify-content: center; /* コンテンツを中央に配置 */
   padding: 0px 10px; /* 画面の上下に 0px の余白、左右に10pxの余白を設定 */
+  background-image: url("background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .container {
